chart_deps/fluent/fluentbit/fluentbit-operated: backward compatable resource names

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/clustermultilineparsers.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/clustermultilineparsers.yaml
@@ -1,5 +1,5 @@
 {{- range $name, $clMultilineParsers :=  .Values.clusterMultilineParsers }}
 {{- $labels := include "fluentbit-operated.labels" $ | fromYaml }}
-{{- $clMultilineParsers = set $clMultilineParsers "name" ( printf "%s-%s" (include "fluentbit-operated.fullname" $ )  $name ) }}
+{{- $clMultilineParsers = set $clMultilineParsers "name" ( printf "%s-parsers-%s" (include "fluentbit-operated.fullname" $ )  $name ) }}
 {{- include "fluentbit.clustermultilineparsers" (list $ (toYaml $labels) $clMultilineParsers ) }}
 {{- end }}
