--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/clusterparsers.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/clusterparsers.yaml
@@ -1,5 +1,5 @@
 {{- range $name, $clParser :=  .Values.clusterParsers }}
 {{- $labels := include "fluentbit-operated.labels" $ | fromYaml }}
-{{- $clParser = set $clParser "name" ( printf "%s-%s" (include "fluentbit-operated.fullname" $ )  $name ) }}
+{{- $clParser = set $clParser "name" ( printf "%s-parsers-%s" (include "fluentbit-operated.fullname" $ )  $name ) }}
 {{- include "fluentbit.clusterparser" (list $ (toYaml $labels) $clParser ) }}
 {{- end }}
