Revert "chart_deps/fluent/fluentbit/fluentbit-operated: backward compatable resource names"
This reverts commit 1598371483a6e6d02a910bb563b48875b2187b13.

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/clusteroutputs.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/clusteroutputs.yaml
@@ -1,5 +1,5 @@
 {{- range $name, $clOutput :=  .Values.clusterOutputs }}
 {{- $labels := include "fluentbit-operated.labels" $ | fromYaml }}
-{{- $clOutput = set $clOutput "name" ( printf "%s-outputs-%s" (include "fluentbit-operated.fullname" $ )  $name ) }}
+{{- $clOutput = set $clOutput "name" ( printf "%s-%s" (include "fluentbit-operated.fullname" $ )  $name ) }}
 {{- include "fluentbit.clusteroutput" (list $ (toYaml $labels) $clOutput ) }}
 {{- end }}
