--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/clusterfilters.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/clusterfilters.yaml
@@ -1,5 +1,5 @@
 {{- range $name, $clFilter :=  .Values.clusterFilters }}
 {{- $labels := include "fluentbit-operated.labels" $ | fromYaml }}
-{{- $clFilter = set $clFilter "name" ( printf "%s-filters-%s" (include "fluentbit-operated.fullname" $ )  $name ) }}
+{{- $clFilter = set $clFilter "name" ( printf "%s-%s" (include "fluentbit-operated.fullname" $ )  $name ) }}
 {{- include "fluentbit.clusterfilter" (list $ (toYaml $labels) $clFilter ) }}
 {{- end }}
