chart_deps/fluent/fluentbit/fluentbit-operated: input examples

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/values.yaml
@@ -70,23 +70,23 @@ clusterFilters:
 
 
 inputs:
-  test:
-    enabled: true
-    namespace: test
-    labels:
-      fluentbit: test
-    tail:
-      tag: kube.*
-      path: "/var/log/containers/*.log"
-      readFromHead: false
-      parser: cri
-      refreshIntervalSeconds: 10
-      memBufLimit: 100MB
-      skipLongLines: true
-      skipEmptyLines: true
-      db: /fluent-bit/tail/pos.db
-      dbSync: Normal
-      storageType: memory
+#  test:
+#    enabled: true
+#    namespace: test
+#    labels:
+#      fluentbit: test
+#    tail:
+#      tag: kube.*
+#      path: "/var/log/containers/*.log"
+#      readFromHead: false
+#      parser: cri
+#      refreshIntervalSeconds: 10
+#      memBufLimit: 100MB
+#      skipLongLines: true
+#      skipEmptyLines: true
+#      db: /fluent-bit/tail/pos.db
+#      dbSync: Normal
+#      storageType: memory
 
 
 clusterInputs:
