chart_deps/fluent/fluentbit/lib: fluentbit.label.constructor + fluentbit.obj.enricher defines

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/clusterconfig.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/clusterconfig.yaml
@@ -1,4 +1,4 @@
 {{- $clConfig :=  .Values.clusterConfig }}
 {{- $labels := include "fluentbit-operated.labels" $ | fromYaml }}
 {{- $clConfig = set $clConfig "name" (include "fluentbit-operated.fullname" . ) }}
-{{- include "fluentbit.clusterconfig" (list $ (toYaml $labels) $clConfig ) }}
+{{- include "fluentbit.clusterconfig" (list $ $labels $clConfig ) }}
