--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/collector.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/collector.yaml
@@ -1,4 +1,4 @@
 {{- $collector :=  .Values.collector }}
 {{- $labels := include "fluentbit-operated.labels" $ | fromYaml }}
 {{- $collector = set $collector "name" (include "fluentbit-operated.fullname" . ) }}
-{{- include "fluentbit.collector" (list $ (toYaml $labels) $collector ) }}
+{{- include "fluentbit.collector" (list $ $labels $collector ) }}
