--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/config.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/config.yaml
@@ -1,4 +1,4 @@
 {{- $config :=  .Values.config }}
 {{- $labels := include "fluentbit-operated.labels" $ | fromYaml }}
 {{- $config = set $config "name" ( include "fluentbit-operated.fullname" . ) }}
-{{- include "fluentbit.config" (list $ (toYaml $labels) $config ) }}
+{{- include "fluentbit.config" (list $ $labels $config ) }}
