--- a/charts/chart_deps/fluent/fluentbit/inputs/templates/inputs.yaml
+++ b/charts/chart_deps/fluent/fluentbit/inputs/templates/inputs.yaml
@@ -1,5 +1,5 @@
 {{- range $name, $input :=  .Values.inputs }}
-{{- $labels := include "fluentbit-inputs.labels" $ | fromYaml }}
+{{- $labels := include "fluentbit-inputs.labels" $ }}
 {{- $input = set $input "name" ( printf "%s-%s" (include "fluentbit-inputs.fullname" $ )  $name ) }}
-{{- include "fluentbit.input" (list $ (toYaml $labels) $input ) }}
+{{- include "fluentbit.input" (list $ $labels $input ) }}
 {{- end }}
