chart_deps/app/core: core.label.constructor + core.obj.enricher defines

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/pvc.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/pvc.yaml
@@ -1,9 +1,5 @@
 {{- range $name, $pvc := .Values.pvcs }}
 {{- $labels := include "fluentbit-operated.labels" $ | fromYaml }}
 {{- $pvc = set $pvc "name" ( printf "%s-%s" (include "fluentbit-operated.fullname" $ )  $name ) }}
-{{- $pvc = set $pvc "enabled" true }}
-{{- if $pvc.labels }}
-{{- $labels = merge $labels $pvc.labels }}
-{{- end }}
-{{- include "core.pvc" (list $ (toYaml $labels) $pvc ) }}
+{{- include "core.pvc" (list $ $labels $pvc ) }}
 {{- end }}
