charts/chart_deps/prometheus/lib: move serviceMonitor template to new location

--- a/charts/chart_deps/app/common/values.yaml
+++ b/charts/chart_deps/app/common/values.yaml
@@ -158,3 +158,10 @@ args: []
 
 serviceMonitor:
   enabled: false
+  prometheusSelector:
+#    prometheus: test
+  labels:
+  targetLabels:
+  endpoints:
+    - targetPort: 9355
+      path: /metrics
