--- a/charts/chart_deps/app/common/templates/servicemonitor.yaml
+++ b/charts/chart_deps/app/common/templates/servicemonitor.yaml
@@ -1,10 +1,7 @@
 {{- $serviceMonitor := .Values.serviceMonitor }}
 {{- $labels := include "common.labels" . | fromYaml }}
-{{- if $serviceMonitor.labels }}
-{{- $labels = merge $labels $serviceMonitor.labels }}
-{{- end }}
 {{- $serviceMonitor = set $serviceMonitor "jobLabel" (include "common.fullname" . ) }}
 {{- $serviceMonitor = set $serviceMonitor "selectorLabels" (include "common.selectorLabels" . | fromYaml ) }}
 {{- $serviceMonitor = set $serviceMonitor "name" (include "common.fullname" . ) }}
 
-{{- include "core.serviceMonitor" (list $ (toYaml $labels) $serviceMonitor) }}
+{{- include "prometheus.serviceMonitor" (list $ $labels $serviceMonitor) }}
