--- a/charts/chart_deps/fluent/fluentbit/lib/Chart.yaml
+++ b/charts/chart_deps/fluent/fluentbit/lib/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: fluentbit-lib
-description: Chart that creates Fluentbit Opertor resources ClusterInput, Input, ClusterOutput, Output etc
+description: Chart that creates Fluentbit Operator resources ClusterInput, ClusterOutput, Output etc
 
 # A chart can be either an 'application' or a 'library' chart.
 #
