Feature fluentbit library chart (#85)
* charts/chart_deps/app/common: pv/pvc to core chart

* charts/chart_deps/app/common: pv add name attribute

* charts/chart_deps/app/common: move serviceMonitor to core chart

* charts/chart_deps/fluent/fluentbit/fluentbit-operated: collector

* chart_deps/app/common: fix servicemonitor naming

* charts/fluent: dummy input/output

* fix

* chart_deps/fluent/fluentbit: lib chart

* chart_deps/fluent/fluentbit/lib: outputs

* chart_deps/fluent/fluentbit/lib: filters

* chart_deps/fluent/fluentbit/lib: parsers

* chart_deps/fluent/fluentbit: move common code to lib

* remove test

* chart_deps/fluent/fluentbit: use lib chart

* chart_deps/fluent/fluentbit/fluentbit-operated: configs to lib

* chart_deps/fluent/fluentbit/fluentbit-operated: collector + fluentbit

* chart_deps/fluent/fluentbit/lib: use generic var name

* chart_deps/fluent/fluentbit/fluentbit-operated: backward compatable resource names

* Revert "chart_deps/fluent/fluentbit/fluentbit-operated: backward compatable resource names"

This reverts commit 1598371483a6e6d02a910bb563b48875b2187b13.

* chart_deps/fluent/fluentbit/fluentbit-operated: examples

* chart_deps/fluent/fluentbit/fluentbit-operated: input examples

* chart_deps/fluent/fluentbit/lib: fluentbit.label.constructor + fluentbit.obj.enricher defines

* chart_deps/app/core: core.label.constructor + core.obj.enricher defines

* charts/chart_deps/prometheus/lib: move serviceMonitor template to new location

* charts/grafana: switch to fluentbit-operated

* chart_deps/{app/common,fluent/fluentbit/fluentbit-operated}: add labels to pv

* charts/fluent: try fix parsers names

* charts/fluent: try fix parsers names p2

* charts/chart_deps/fluent/fluentbit: remove app charts

* changelog: update

* chart_deps/fluent/fluentbit/lib: fix typo

--- a/charts/chart_deps/app/common/templates/pv.yaml
+++ b/charts/chart_deps/app/common/templates/pv.yaml
@@ -1,31 +1,5 @@
 {{- range $name, $pv := .Values.pvs }}
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: {{ include "common.fullname" $ }}-{{ $name }}
-spec:
-  {{- if $pv.accessModes }}
-  accessModes:
-  {{- toYaml $pv.accessModes | nindent 4}}
-  {{- else }}
-  accessModes:
-  - ReadWriteOnce
-  {{- end }}
-  capacity:
-    storage: {{ $pv.storage }}
-  {{- if $pv.storageClass }}
-  storageClassName: {{ $pv.storageClass }}
-  {{- end }}
-  {{- with $pv.mountOptions }}
-  mountOptions:
-  {{- toYaml . | nindent 4 }}
-  {{- end }}
-  {{- with $pv.csi }}
-  csi:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $pv.claimRef }}
-  claimRef:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
+{{- $labels := include "common.labels" $ | fromYaml }}
+{{- $pv = set $pv "name" ( printf "%s-%s" (include "common.fullname" $ )  $name ) }}
+{{- include "core.pv" (list $ $labels $pv ) }}
 {{- end }}
