--- a/charts/chart_deps/app/common/templates/pvc.yaml
+++ b/charts/chart_deps/app/common/templates/pvc.yaml
@@ -1,28 +1,5 @@
 {{- range $name, $pvc := .Values.pvcs }}
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  labels:
-    {{- include "common.labels" $ | nindent 4 }}
-    {{- if $pvc.labels }}
-    {{- toYaml $pvc.labels | nindent 4 }}
-    {{- end }}
-  name: {{ include "common.fullname" $ }}-{{ $name }}
-spec:
-  {{- if $pvc.accessModes }}
-  accessModes:
-  {{- toYaml $pvc.accessModes | nindent 4}}
-  {{- else }}
-  accessModes:
-  - ReadWriteOnce
-  {{- end }}
-  {{- if $pvc.volumeName }}
-  volumeName: {{ tpl $pvc.volumeName $ }}
-  {{- end }}
-  resources:
-    requests:
-      storage: {{ $pvc.storage }}
-  {{- if $pvc.storageClass }}
-  storageClassName: {{ $pvc.storageClass }}
-  {{- end }}
+{{- $labels := include "common.labels" $ | fromYaml }}
+{{- $pvc = set $pvc "name" ( printf "%s-%s" (include "common.fullname" $ )  $name ) }}
+{{- include "core.pvc" (list $ $labels $pvc ) }}
 {{- end }}
