--- a/charts/chart_deps/app/common/values.yaml
+++ b/charts/chart_deps/app/common/values.yaml
@@ -156,5 +156,12 @@ command: []
 
 args: []
 
-servicemonitor:
+serviceMonitor:
   enabled: false
+  prometheusSelector:
+#    prometheus: test
+  labels:
+  targetLabels:
+  endpoints:
+    - targetPort: 9355
+      path: /metrics
