charts/chart_deps/app: secret tpl

--- a/charts/chart_deps/app/common/values.yaml
+++ b/charts/chart_deps/app/common/values.yaml
@@ -165,3 +165,17 @@ serviceMonitor:
   endpoints:
     - targetPort: 9355
       path: /metrics
+
+secrets:
+#  test:
+#    labels:
+#      test: test
+#    annotations:
+#      test: test
+#    type: Opaque
+#    data:
+#      test: "123"
+#      test1: |
+#        some:
+#          yaml:
+#            - 123
