--- a/charts/chart_deps/app/common/templates/deployment.yaml
+++ b/charts/chart_deps/app/common/templates/deployment.yaml
@@ -5,8 +5,7 @@
 {{- $app_affinity := ternary .Values.affinity .Values.global.affinity ( hasKey .Values "affinity") }}
 {{- $labels := include "common.labels" $ | fromYaml }}
 {{- $deployment := .Values }}
-{{- $initContainers := (include "common.initContainers" . | fromYaml).initContainers }}
-{{- $deployment = set $deployment "initContainers" $initContainers }}
+{{- $deployment = set $deployment "initContainers" (include "common.initContainers" . | fromYaml).initContainers }}
 {{- $deployment = set $deployment "enabled" .Values.deploymentEnabled }}
 {{- $deployment = set $deployment "name" (include "common.fullname" . ) }}
 {{- $deployment = set $deployment "selectorLabels" (include "common.selectorLabels" . ) }}
