charts/fluent: use common chart for fluentbit-gcp

--- a/charts/chart_deps/app/common/values.yaml
+++ b/charts/chart_deps/app/common/values.yaml
@@ -22,6 +22,12 @@ statefulsetEnabled: false
 
 volumeClaimTemplates: {}
 
+volumes: {}
+volumeMounts: {}
+persistentVolumeClaimRetentionPolicy: {}
+#  whenDelted: "Delete"
+#  whenScaled: "Retain"
+
 clusterRole:
   enabled: false
   name: '{{ include "common.fullname" . }}'
