--- a/charts/fluent/values.yaml
+++ b/charts/fluent/values.yaml
@@ -1,8 +1,3 @@
-global:
-  image:
-    repository: ghcr.io/fluent/fluent-operator/fluent-operator
-    tag: v3.4.0@sha256:5d6a3d048aaae3acfbb67269acc996b566d63ce2478ff16cf1f49f4cceb6b4ed
-
 fluentbit:
   enabled: false
   labels:
@@ -309,10 +304,8 @@ fluentbit:
           - list
 
 fluentbit-gcp:
-  enabled: false
-  labels:
-    fluentbit: "gcp"
-  clusterInputs:
+  enabled: true
+  inputs:
     control-plane:
       tail:
         tag: kube.control-plane.*
@@ -322,64 +315,75 @@ fluentbit-gcp:
         memBufLimit: 100MB
         skipLongLines: true
         skipEmptyLines: true
-        db: /buffers/fluentbit/log/k8s.db
+        db: /fluent-bit/buffers/k8s.db
         dbSync: Normal
         storageType: memory
 
-  clusterOutputs:
+  outputs:
     stdout:
       match: 'kube.control-plane.*'
       stdout:
         format: json
 
+  deploymentEnabled: false
+  statefulsetEnabled: true
 
-  clusterConfig:
-    enabled: true
-    service:
-      parsersFile: /fluent-bit/etc/parsers.conf
-      httpServer: true
-    inputSelector:
-      matchLabels:
-        fluentbit: "gcp"
-    filterSelector:
-      matchLabels:
-        fluentbit: "gcp"
-    parserSelector:
-      matchLabels:
-        fluentbit: "gcp"
-    outputSelector:
-      matchLabels:
-        fluentbit: "gcp"
-    multilineParserSelector:
-      matchLabels:
-        fluentbit: "gcp"
+  serviceAccount:
+    create: false
+    name: fluent
 
+  volumeClaimTemplates:
+    buffers:
+      storage: 1Gi
 
-  collector:
-    enabled: true
-    annotations:
-      gke-gcsfuse/volumes: 'true'
-      gke-gcsfuse/ephemeral-storage-request: '500Mi'
-    image: ghcr.io/fluent/fluent-operator/fluent-bit:4.0.9-debug
-    resources:
-      limits:
-        cpu: 500m
-        memory: 1200Mi
-      requests:
-        cpu: 10m
-        memory: 25Mi
-    volumesMounts:
-      - name: gcsfuse
-        mountPath: /var/log/k8s
-    volumes:
-      - name: gcsfuse
-        persistentVolumeClaim:
-          claimName: '{{ include "fluentbit-operated.fullname" $ }}-gcsfuse'
+  persistentVolumeClaimRetentionPolicy:
+    whenDelted: "Delete"
+
+  podAnnotations:
+    gke-gcsfuse/volumes: 'true'
+    gke-gcsfuse/ephemeral-storage-request: '500Mi'
+  image:
+    repository: ghcr.io/fluent/fluent-operator/fluent-bit
+    tag: 4.0.9-debug
+  environment:
+    - name: NODE_NAME
+      valueFrom:
+        fieldRef:
+          apiVersion: v1
+          fieldPath: spec.nodeName
+    - name: HOST_IP
+      valueFrom:
+        fieldRef:
+          apiVersion: v1
+          fieldPath: status.hostIP
+  resources:
+    limits:
+      cpu: 500m
+      memory: 1200Mi
+    requests:
+      cpu: 10m
+      memory: 25Mi
+
+  volumeMounts:
+    - mountPath: /fluent-bit/config
+      name: config
+      readOnly: true
+    - name: buffers
+      mountPath: /fluent-bit/buffers
+  volumes:
+    - name: config
+      secret:
+        defaultMode: 420
+        secretName: '{{ include "common.fullname"  $}}'
+    - name: buffers
+      persistentVolumeClaim:
+        claimName: '{{ include "common.fullname" $ }}-buffers'
   pvcs:
     gcsfuse:
+      mountPath: /var/log/k8s
       storage: 1Gi
       storageClass: gcsfuse
-      volumeName: '{{ include "fluentbit-operated.fullname" $ }}-gcsfuse'
+      volumeName: '{{ include "common.fullname" $ }}-gcsfuse'
       accessModes:
         - ReadWriteMany
   pvs:
@@ -396,12 +400,15 @@ fluentbit-gcp:
         driver: gcsfuse.csi.storage.gke.io
         volumeHandle: '{{printf "%s-logs-%s" .Values.global.bucket.prefix .Values.global.bucket.suffix }}'
       claimRef:
-        name: '{{ include "fluentbit-operated.fullname" $ }}-gcsfuse'
+        name: '{{ include "common.fullname" $ }}-gcsfuse'
         namespace: '{{ .Release.Namespace }}'
 
 
 operator:
   enabled: false
+  image:
+    repository: ghcr.io/fluent/fluent-operator/fluent-operator
+    tag: v3.4.0@sha256:5d6a3d048aaae3acfbb67269acc996b566d63ce2478ff16cf1f49f4cceb6b4ed
   service:
     enabled: false
   resources:
